inserçao elementos na pagina, estilizaçao header

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
   </head>
   <body>
     <header>
-        
+        <img src="./assets/images/logo.svg" alt="">
     </header>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
-
+    <main>
+      <img src="./assets/images/illustration-mockups.svg" alt="">
+      <p>
+        Build The Community Your Fans Will Love Huddle re-imagines the way we build
+        communities. You have a voice, but so does your audience. Create connections
+        with your users as you engage in genuine discussion. Register
+      </p>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
