--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
   </head>
   <body>
     <header>
-        <img src="./assets/images/logo.svg" alt="">
+        <img class="logo-header" src="./assets/images/logo.svg" alt="">
     </header>
     <main>
-      <img src="./assets/images/illustration-mockups.svg" alt="">
-      <p>
-        Build The Community Your Fans Will Love Huddle re-imagines the way we build
-        communities. You have a voice, but so does your audience. Create connections
-        with your users as you engage in genuine discussion. Register
-      </p>
+        <div class="img-div-main">
+            <img src="./assets/images/illustration-mockups.svg" alt="">
+        </div>
+        <div class="text-div-main">
+            <h2>Build The Community Your Fans Will Love</h2>
+            <p>
+              Huddle re-imagines the way we build
+              communities. You have a voice, but so does your audience. Create connections
+              with your users as you engage in genuine discussion. Register
+            </p>
+        </div>
     </main>
     <footer>
       <p class="attribution">
