adicionado Button Register, removido padding left Div Text, adc space-around main

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               communities. You have a voice, but so does your audience. Create connections
               with your users as you engage in genuine discussion.
             </p>
+            <input class="btn-register" type="button" value="Register">
         </div>
     </main>
     <footer>
