criada div social com estilizaçao Flex, setando width max

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </head>
   <body>
     <header>
-        <img class="logo-header" src="./assets/images/logo.svg" alt="">
+        <img class="logo-header" src="./assets/images/logo.svg" alt="Logo com os dizeres Huddle Escrito">
     </header>
     <main>
         <div class="img-div-main">
-            <img src="./assets/images/illustration-mockups.svg" alt="">
+            <img src="./assets/images/illustration-mockups.svg" alt="Imagem Principal exemplificando uma imagem de um site">
         </div>
         <div class="text-div-main">
             <h2>Build The Community Your Fans Will Love</h2>
@@ -32,6 +32,11 @@
               with your users as you engage in genuine discussion.
             </p>
             <input class="btn-register" type="button" value="Register">
+        </div>
+        <div class="social-div-main">
+          <i>1</i>
+          <i>2</i>
+          <i>3</i>
         </div>
     </main>
     <footer>
