--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
+    <script src="https://kit.fontawesome.com/74ead93189.js" crossorigin="anonymous"></script>
 
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
@@ -34,9 +35,9 @@
             <input class="btn-register" type="button" value="Register">
         </div>
         <div class="social-div-main">
-          <i>1</i>
-          <i>2</i>
-          <i>3</i>
+          <i class="icon fa-brands fa-facebook-f"></i>
+          <i class="icon fa-brands fa-twitter"></i>
+          <i class="icon fa-brands fa-instagram"></i>
         </div>
     </main>
     <footer>
