--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/carlosaant">Carlos Antonio</a>.
+        >. Coded by <a href="#">Carlos Antonio</a>.
       </p>
     </footer>
   </body>
